# multiblog

./: .editorconfig  .gitignore  .hlint.yaml  .releaserc.json  .travis.yml  Dockerfile  README.md  install-deps  multiblog.cabal  package.json  package.yaml  renovate.json5  stack.yaml  stylish  test-integration.sh  tsconfig.json  webhome.cabal
.github/workflows/: main.yaml  renovate-lockfile.yaml
app/: Main.hs
src/: App.hs  AppMain.hs  Authorize.hs  Cache.hs  CrossPost.hs  Import.hs  Language.hs  Main.hs  Models.hs  ReloadHup.hs  Render.hs  Routes.hs  Serve.hs  Utils.hs  Views.hs  config.ts  index.ts
src/Data/: LanguageCodes.hs
src/Options/Generic/: Default.hs
src/Types/: Content.hs  Language.hs  Services.hs
src/Views/: Export.hs  Feed.hs
src/data/: article.ts  common.ts  language.ts  link.ts  meta.ts  routes.ts  site.ts
templates/: analytics.hamlet  article.hamlet  base.hamlet  base_presentation.hamlet  list.hamlet  meta.hamlet  meta_presentation.hamlet  meta_talk.hamlet  pdf-export.hamlet  print.lucius  site.julius
testsuite/: Arbitrary.hs  TestCache.hs  TestImport.hs  TestLanguage.hs  TestMain.hs  TestModels.hs  TestRoutes.hs  TestUtils.hs  TestViews.hs  TestViewsExport.hs
testsuite/Data/LanguageCodes/: Arbitrary.hs
testsuite/Integration/: Base.hs  TestArticle.hs  TestBase.hs  TestFeed.hs  TestHome.hs  TestMeta.hs  TestRSS.hs  TestStatic.hs
testsuite/Integration/content/: 2014-10-30-early.md  2014-11-06-filler.md  2015-01-01-test-en.md  2015-02-01-another-en.md  analytics.yaml  links.yaml  meta-en.md  meta-ru.md  settings.yaml  strings.yaml
testsuite/Integration/content/2014-10-30-early/: en.md
testsuite/Integration/content/2014-11-03-filler/: en.md
testsuite/Integration/content/2015-01-01-first-test/: en.md
testsuite/Integration/content/2015-02-01-another/: en.md
testsuite/Integration/content/2018-01-01-some-code/: ru.md
testsuite/Integration/content/meta/about/: en.md  zh.md
testsuite/Integration/content/meta/custom-slug/: en.md  options.yaml
testsuite/Integration/content/meta/meta/: en.md  ru.md
testsuite/Integration/content/static/: some-verification-file.html  unrelated.md
testsuite/Integration/test_content/: about-en.md
