Name:                multiblog
Version:             0.1
Synopsis:            Home page of koterpillar.com
Description:         Project Description Here
License:             MIT
Author:              Alexey Kotlyarov
Maintainer:          a@koterpillar.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable multiblog
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: -Wall -Werror

  Build-depends: base >= 4.7 && < 5
               , blaze-html
               , blaze-markup
               , boomerang
               , bytestring
               , containers
               , directory
               , feed
               , filepath
               , happstack-server
               , iso639
               , mtl
               , network
               , pandoc
               , pandoc-types
               , process
               , process-extras
               , shakespeare
               , split
               , system-argv0
               , system-filepath
               , text
               , time
               , transformers
               , xml
               , web-routes
               , web-routes-boomerang
               , web-routes-happstack
               , web-routes-th
               , utf8-string
               , unix
               , yaml

Test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src, testsuite
  main-is: TestMain.hs

  build-depends: base >= 4.7 && <5
               , blaze-html
               , bytestring
               , containers
               , directory
               , filepath
               , happstack-server
               , iso639
               , mtl
               , pandoc
               , pandoc-types
               , shakespeare
               , split
               , time
               , xml
               , derive
               , HTF
               , HUnit
               , base
