Name:                multiblog
Version:             0.1
Synopsis:            Blog engine for koterpillar.com
Description:         Static blog engine with multilingual support
License:             MIT
Author:              Alexey Kotlyarov
Maintainer:          a@koterpillar.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable multiblog
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: -Wall -Werror

  Build-depends: base >= 4.7 && < 5
               , aeson
               , blaze-html
               , blaze-markup
               , boomerang
               , bytestring
               , containers
               , data-default-class
               , directory
               , feed
               , filepath
               , happstack-server
               , iso639
               , mtl
               , network
               , pandoc
               , pandoc-types
               , process
               , process-extras
               , shakespeare
               , split
               , system-argv0
               , system-filepath
               , tagsoup
               , text
               , time
               , transformers
               , twitter-conduit
               , unix
               , utf8-string
               , web-routes
               , web-routes-boomerang
               , web-routes-happstack
               , web-routes-th
               , xml
               , yaml
  other-modules: App
               , Authorize
               , Cache
               , Import
               , Language
               , Models
               , ReloadHup
               , Routes
               , Serve
               , Utils
               , Views
               , Views.Export
               , Views.Feed

Test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src, testsuite
  main-is: TestMain.hs

  build-depends: base >= 4.7 && <5
               , HTF
               , HUnit
               , blaze-html
               , bytestring
               , containers
               , data-default-class
               , derive
               , directory
               , filepath
               , happstack-server
               , iso639
               , mtl
               , pandoc
               , pandoc-types
               , quickcheck-instances
               , shakespeare
               , split
               , time
               , twitter-conduit
               , xml
  other-modules: App
               , Arbitrary
               , Cache
               , Import
               , Integration.Base
               , Integration.TestArticle
               , Integration.TestHome
               , Integration.TestMeta
               , Integration.TestRSS
               , Integration.TestStatic
               , Language
               , Models
               , Routes
               , TestCache
               , TestImport
               , TestLanguage
               , TestModels
               , TestRoutes
               , TestUtils
               , TestViews
               , TestViewsExport
               , Utils
               , Views
               , Views.Export
               , Views.Feed
