Name:                webhome
Version:             0.1
Synopsis:            Home page of koterpillar.com
Description:         Project Description Here
License:             MIT
Author:              Alexey Kotlyarov
Maintainer:          a@koterpillar.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable webhome
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    blaze-html >= 0.7,
    bytestring >= 0.10,
    directory >= 1.2,
    filepath >= 1.3,
    happstack == 7.0.*,
    happstack-server >= 7.3,
    mtl >= 2.1 && < 2.3,
    pandoc >= 1.13,
    shakespeare >= 2.0,
    time >= 1.4 && < 1.6,
    base >= 4.4 && < 5
