Name:                webhome
Version:             0.1
Synopsis:            Home page of koterpillar.com
Description:         Project Description Here
License:             MIT
Author:              Alexey Kotlyarov
Maintainer:          a@koterpillar.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable webhome
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    blaze-html >= 0.7,
    bytestring >= 0.10,
    containers >= 0.5,
    directory >= 1.2,
    filepath >= 1.3,
    mtl >= 2.1 && < 2.3,
    pandoc >= 1.13,
    pandoc-types >= 1.12,
    scotty >= 0.9.0,
    shakespeare >= 2.0,
    split >= 0.2,
    text >= 1.1,
    time >= 1.4 && < 1.6,
    base >= 4.4 && < 5

Test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src, testsuite
  main-is: TestMain.hs
  build-depends:
    blaze-html >= 0.7,
    bytestring >= 0.10,
    containers >= 0.5,
    directory >= 1.2,
    filepath >= 1.3,
    mtl >= 2.1 && < 2.3,
    pandoc >= 1.13,
    pandoc-types >= 1.12,
    scotty >= 0.9.0,
    shakespeare >= 2.0,
    split >= 0.2,
    text >= 1.1,
    time >= 1.4 && < 1.6,
    HTF >= 0.12,
    base >= 4.4 && < 5
